@@ -90,39 +90,11 @@ parameter_list|)
 block|{
 return|return
 operator|new
-name|RandomAccessWeight
+name|ConstantScoreWeight
 argument_list|(
 name|this
 argument_list|)
 block|{
-annotation|@
-name|Override
-specifier|protected
-name|Bits
-name|getMatchingDocs
-parameter_list|(
-name|LeafReaderContext
-name|context
-parameter_list|)
-throws|throws
-name|IOException
-block|{
-return|return
-operator|new
-name|Bits
-operator|.
-name|MatchAllBits
-argument_list|(
-name|context
-operator|.
-name|reader
-argument_list|()
-operator|.
-name|maxDoc
-argument_list|()
-argument_list|)
-return|;
-block|}
 annotation|@
 name|Override
 specifier|public
@@ -138,6 +110,42 @@ operator|.
 name|this
 operator|+
 literal|")"
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|Scorer
+name|scorer
+parameter_list|(
+name|LeafReaderContext
+name|context
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+return|return
+operator|new
+name|ConstantScoreScorer
+argument_list|(
+name|this
+argument_list|,
+name|score
+argument_list|()
+argument_list|,
+name|DocIdSetIterator
+operator|.
+name|all
+argument_list|(
+name|context
+operator|.
+name|reader
+argument_list|()
+operator|.
+name|maxDoc
+argument_list|()
+argument_list|)
+argument_list|)
 return|;
 block|}
 annotation|@
